--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,5 @@
 }
 
 body{
-    background-color: antiquewhite;
-    font: Open Sans, embeddato;
+    font-family: 'Open Sans', sans-serif, Arial, Helvetica, sans-serif;
 }
