--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* impo generali */
 body{
     font-family: 'Open Sans', sans-serif, Arial, Helvetica, sans-serif;
 }
@@ -14,13 +15,20 @@ body{
     content: '';
 }
 
+.container-center{
+    width: 90%;
+    margin: 0 auto;
+    /* debug */
+    background-color: red;
+    height: 200px;
+}
+
+/* impo button */
 .btn{
     color: #000;
     font-size: 14px;
     padding: 6px 20px;
     text-decoration: none;
-    /* debug */
-    /* border: 1px solid black; */
 }
 
 .btn.btn-blue{
@@ -38,8 +46,7 @@ header{
     z-index: 9999;
     height: 80px;
     line-height: 80px;
-    /* debug */
-    /* background-color: red; */
+    background-color: #fff;
 }
 
 #main-nav{
@@ -51,13 +58,11 @@ header{
 .nav-sx{
     width: 50%;
     float: left;
-    /* debug */
 }
 .nav-dx{
     width: 50%;
     float: right;
     text-align: end;
-    /* debug */
 }
 
 #logo{
@@ -72,7 +77,6 @@ header{
 
 #main-nav ul{
     display: inline-block;
-    /* list-style-type: none; */
 }
 #main-nav li{
     display: inline-block;
@@ -83,5 +87,14 @@ header{
     margin: 10px;
     padding: 10px;
     text-decoration: none;
+}
+
+
+/* sezione jumbotron */
+.jumbotron{
+    background-color: #b4d0e7;
+    min-height: 400px;
+    /* debug */
+    /* height: 500px; */
 }
 
