modifiche colonne prezzi

--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,30 @@ header{
     text-align: center;
     padding: 10px;
 }
+
+.content-col-price{
+    font-size: 11px;
+    padding: 10px 25px;
+}
+.content-col-price span{
+    display: block;
+}
+.content-col-price h4{
+    font-size: 15px;
+}
+.content-col-price h4, .price{
+    font-weight: bold;
+    margin: 15px 0;
+
+}
+.content-col-price ul{
+    list-style: none;
+}
+
+.content-col-price li{
+    margin: 10px 0;
+}
+
+.content-col-price i{
+    margin-right: 4px;
+}
