--- a/css/style.css
+++ b/css/style.css
@@ -168,8 +168,12 @@ header{
 .col-price{
     width: calc(100% / 3 - 40px);
     float: left;
-    margin: 30px 20px;
+    /* margin: 30px 0; */
     border: rgb(175, 175, 175) 1px solid;
+}
+
+#col-price-middle{
+    margin: 0 60px;
 }
 
 .head-col-price{
@@ -208,7 +212,7 @@ header{
 }
 
 .col-full{
-    margin: 30px 20px;
+    margin-top: 30px;
     border: rgb(175, 175, 175) 1px solid;
 
 }
