--- a/css/style.css
+++ b/css/style.css
@@ -301,11 +301,8 @@ header{
 .carousel-center{
     float: left; 
     width: 40%;
-    padding: 25px;
+    padding: 40px;
 }
-/* .row{
-    min-height: 150px;
-} */
 .row>.col-floatleft-50{
     min-height: 150px;
     position: relative;
@@ -317,10 +314,23 @@ header{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
+/* .item-carousel{
+    overflow: scroll;
+    max-height: 100px;
+} */
 .item-carousel>img{
     width: 25%;
 }
+.item-text-carousel{
+    overflow: scroll;
+    max-height: 135px;
+}
+.item-text-carousel>p{
+    margin: 14px 0;
+    font-size: 10px;
+}
+
+
 /* classi img svg del carousel */
 .change-svg-color {
     filter: invert(93%) sepia(0%) saturate(0%) hue-rotate(280deg) brightness(106%) contrast(106%);
