--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,11 @@ h5{
     border: none;
 }
 
+.btn.btn-white{
+    background-color: #fff;
+    border: none;
+}
+
 /* header */
 header{
     position: fixed;
@@ -119,12 +124,14 @@ header{
 
 /* sezione jumbotron */
 .jumbotron{
-    background-color: #b4d0e7;
     min-height: 500px;
     margin-top: 80px;
     padding-top: 80px;
     /* debug */
     /* height: 500px; */
+}
+.bg-azul{
+    background-color: #b4d0e7;
 }
 
 .jumbotron h1{
@@ -314,10 +321,6 @@ header{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-/* .item-carousel{
-    overflow: scroll;
-    max-height: 100px;
-} */
 .item-carousel>img{
     width: 25%;
 }
@@ -358,4 +361,13 @@ header{
 }
 .yellow-svg{
     background-color: #fdd82f;
+}
+
+/* sezione 2 colonne sotto carousel */
+#contact{
+    padding: 50px 0;
+    color: #61082b;
+}
+#contact a{
+    margin: 35px 0;
 }
