--- a/css/style.css
+++ b/css/style.css
@@ -96,9 +96,6 @@ header{
     text-align: end;
     padding-left: 100px;
 }
-/* .nav-dx:last-child{
-    display: inline;
-} */
 
 #logo{
     text-decoration: none;
@@ -120,6 +117,10 @@ header{
     padding: 10px 20px;
     text-decoration: none;
 }
+    /* navbar on Hover */   
+    #main-nav li:hover{
+        border-bottom: 2px solid #0d61ff;
+    }
 
 
 /* sezione jumbotron */
