--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ h5{
 }
 
 .btn.btn-white{
-    background-color: #fff;
+    /* background-color: #fff; */
     border: none;
 }
 
@@ -143,10 +143,15 @@ header{
 .jumbotron{
     min-height: 500px;
     margin-top: 80px;
-    padding-top: 80px;
+    /* padding-top: 80px; */
     /* debug */
     /* height: 500px; */
 }
+.jumbotron>.container-center{
+    position: relative;
+    bottom: -80px;
+}
+
 .bg-azul{
     background-color: #b4d0e7;
 }
