--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,16 @@ header{
 
 
 /* sezione accordion */
+#accordion{
+    margin: 50px 0;
+}
 .faq{
     border-top: 2px solid #F5F5F5;
     padding: 20px 0;
+    position: relative;
+}
+.faq-icon{
+    position: absolute;
+    right: 15px;
+    top: 17px;
 }
