inseriti tag a nel footer

--- a/css/style.css
+++ b/css/style.css
@@ -432,6 +432,13 @@ footer{
     list-style: none;
     
 }
+.col-footer li{
+    margin-bottom: 5px;
+}
+.col-footer li a{
+    color: #fff;
+    text-decoration: none;
+}
 .col-footer h5{
     font-size: 14px;
     margin: 10px 0;
