--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -155,7 +155,7 @@ header{
 .hidden-nav{
     display: none;
     position: absolute;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, .8);
     top: 83px;
     left: 0;
     text-align: center;
