--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -224,6 +224,37 @@ header{
 #dropbox-business-price{
     margin: 100px 0;
 }
+/* fake radiobox */
+.fake-radiobox{
+    display: inline-block;
+    height: 13px;
+    width: 13px;
+    border: 3px solid #0d61ff;
+    border-radius: 50%;
+    padding: 5px;
+    vertical-align: middle;
+    position: relative;
+}
+
+.radiobox-selected{
+    display: inline-block;
+    height: 6px;
+    width: 6px;
+    border-radius: 50%;
+    vertical-align: middle;
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.fake-radiobox:hover .radiobox-selected{
+    background-color: #0d61ff;
+    border-radius: 1px solid #fff;
+    padding: 1px;
+}
+
+
 .radio-box{
     margin: 30px 0;
 }
