--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -144,7 +144,8 @@ header{
 .hidden-nav>ul>li{
     color: #000;
     font-size: 14px;
-    padding: 10px 20px;
+    padding: 4px 10px;
+    line-height: 25px;
     text-decoration: none;
 }
 .hidden-nav a{
