--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -399,8 +399,12 @@ header{
     width: 40%;
     padding: 40px;
 }
-.row>.col-floatleft-50{
+.row{
     min-height: 150px;
+}
+.row>.col-floatleft-50{
+    height: 100%;
+    padding-top: 50%;
     position: relative;
 }
 .row>.col-floatleft-50 img{
@@ -429,7 +433,7 @@ header{
   }
 .green-svg{
     background-color: #a2d39b;
-    border: 8px solid #d0e9cd;
+    /* border: 8px solid #d0e9cd; */
 }
 .darkred-svg{
     background-color: #61082b;
