--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -426,15 +426,17 @@ header{
     font-size: 10px;
 }
 
-.border{
-    height: 100%;
-    width: 100%;
+.border::after{
+    height: calc(100% - 12px);
+    width: calc(100% - 12px);
     border: 6px solid #d0e9cd;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0%;
+    bottom: 0;
+    display: table;
+    content: '';
 }
 
 /* classi img svg del carousel */
