--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ header{
     display: inline-block;
 }
 #main-nav li a{
-    color: #000;
+    /* color: #000; */
     font-size: 14px;
     /* margin: 10px; */
     padding: 10px 20px;
