--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -134,7 +134,7 @@ header{
 
 }
 .nav-sx>ul>li>a, .nav-dx>ul>li>a{
-    color: #000;
+    /* color: #000; */
     font-size: 14px;
     padding: 10px 20px;
     text-decoration: none;
