--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -53,9 +53,9 @@ h5{
 
 
 /* effetti on Hover */   
+
 #main-nav li:hover{
     border-bottom: 2px solid #0d61ff;
-    text-decoration: none;
 }
 .btn:hover{
     background-color: rgba(170, 170, 170, .8);
@@ -91,12 +91,11 @@ h5{
 header{
     position: fixed;
     width: 100%;
-    max-width: 1280px;
     top: 0;
     left: 0;
     z-index: 9999;
     height: 81px;
-    line-height: 81px;
+    line-height: 79px;
     background-color: #fff;
 }
 
@@ -107,15 +106,13 @@ header{
 }
 
 .nav-sx{
-    width: 50%;
+    width: 45%;
     float: left;
-    padding-right: 100px;
 }
 .nav-dx{
-    width: 50%;
+    width: 45%;
     float: right;
     text-align: end;
-    padding-left: 100px;
 }
 
 #logo{
@@ -134,8 +131,7 @@ header{
 
 }
 .nav-sx>ul>li>a, .nav-dx>ul>li>a{
-    /* color: #000; */
-    font-size: 14px;
+    color: #000;
     padding: 10px 20px;
     text-decoration: none;
 }
@@ -145,7 +141,6 @@ header{
 
 .hidden-nav>ul>li{
     color: #000;
-    font-size: 14px;
     padding: 4px 10px;
     line-height: 25px;
     text-decoration: none;
@@ -167,8 +162,9 @@ header{
 #main-nav li:hover .hidden-nav{
     display: block;
 }
-
-
+#start{
+    color: #fff;
+}
 
 /* sezione jumbotron */
 .jumbotron{
